test/spec_vectors/local_tee/fail/module_11.wat
(module (func $type-param-arg-void-vs-num (param i32) (local.tee 0 (nop))))